convert to pandas in order to consolidate csv as could not create comp_key

--- a/dsa-airflow/dags/rg_work_test.ipynb
+++ b/dsa-airflow/dags/rg_work_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,11 @@
     "\n",
     "for csv in file_names:\n",
     "    idf = sparkql.read.csv(os.path.join(data_dir,csv+'.csv'), header=True)\n",
+    "    idf = idf.toDF('date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
     "    idf = idf.withColumn('stock_name', sf.lit(csv))\n",
-    "    idf = idf.toDF('date', 'open', 'high', 'low', 'close', 'adj_close', 'volume', 'stock_name')\n",
-    "    #df.select('stock_name', 'Date', 'Open', 'High', 'Low', 'Close', 'Adj Close', 'Volume')\n",
     "    idf = idf.select('stock_name', 'date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
     "    idf = idf.toPandas()\n",
-    "    idf.to_csv(os.path.join(data_dir,'all_tech_stocks.csv'), mode='a')\n",
+    "    idf.to_csv(os.path.join(data_dir,'all_tech_stocks.csv'), mode='a', header=True)\n",
     "\n",
     "df = sparkql.read.csv(os.path.join(data_dir,'all_tech_stocks.csv'), header=True)\n",
     "\n"
@@ -37,37 +36,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+----------+----------+----------+----------+----------+---------+--------+\n",
-      "|stock_name|      date|      open|      high|       low|     close|adj_close|  volume|\n",
-      "+----------+----------+----------+----------+----------+----------+---------+--------+\n",
-      "|       IBM|2010-01-04|125.411087|127.122368|125.095604|126.625237|81.314735| 6438444|\n",
-      "|       IBM|2010-01-05|125.889099|126.051628|124.378586|125.095604|80.332451| 7156104|\n",
-      "|       IBM|2010-01-06|124.933075|125.707458|124.101341|124.282982|79.810623| 5863144|\n",
-      "|       IBM|2010-01-08|123.393883|125.162521|123.374763|125.095604|80.332451| 4390271|\n",
-      "|       IBM|2010-01-12|123.355644|125.554497|123.326958|124.770554|80.123688| 8453249|\n",
-      "|       IBM|2010-01-13|124.655830|125.353729|123.479927|124.502869|79.951813| 6752348|\n",
-      "|       IBM|2010-01-15|126.223709|127.045891|125.325050|125.984703|80.903419| 8885142|\n",
-      "|       IBM|2010-01-21|124.732315|124.942642|122.428299|123.326958|79.196678|10050596|\n",
-      "|       IBM|2010-01-26|120.382408|122.131927|119.894836|120.219887|77.201416| 7463524|\n",
-      "|       IBM|2010-01-27|120.286804|121.376671|119.541107|120.774376|77.557495| 9120283|\n",
-      "|       IBM|2010-01-28|121.443596|121.453156|117.638626|118.307838|75.973564|10064821|\n",
-      "|       IBM|2010-02-02|119.302101|120.277245|118.499046|120.009560|77.066368| 6171295|\n",
-      "|       IBM|2010-02-08|117.734222|117.801147|116.386230|116.520073|75.160164| 5981551|\n",
-      "|       IBM|2010-02-10|117.533463|118.212234|116.835564|117.409180|75.733673| 5459179|\n",
-      "|       IBM|2010-02-18|120.583176|122.370934|120.458893|122.189293|78.817039| 5780091|\n",
-      "|       IBM|2010-02-19|121.749519|122.428299|121.290634|121.596558|78.434723| 6593043|\n",
-      "|       IBM|2010-02-23|120.917786|122.045891|120.458893|120.898659|77.984558| 4803127|\n",
-      "|       IBM|2010-03-01|121.892921|123.164436|121.864243|122.915871|79.285713| 4788274|\n",
-      "|       IBM|2010-03-04|121.481834|121.481834|119.952202|121.147224|78.144867| 6309786|\n",
-      "|       IBM|2010-03-05|121.577438|121.940727|121.453156|121.653923|78.471718| 6422649|\n",
-      "+----------+----------+----------+----------+----------+----------+---------+--------+\n",
+      "23/02/13 13:43:04 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: , date, stock_name, open, high, low, close, adj_close, volume\n",
+      " Schema: _c0, date, stock_name, open, high, low, close, adj_close, volume\n",
+      "Expected: _c0 but found: \n",
+      "CSV file: file:///Users/Ruben/Desktop/team-week3/dsa-airflow/data/all_tech_stocks.csv\n",
+      "+---+----------+----------+--------+--------+--------+--------+---------+----------+\n",
+      "|_c0|      date|stock_name|    open|    high|     low|   close|adj_close|    volume|\n",
+      "+---+----------+----------+--------+--------+--------+--------+---------+----------+\n",
+      "|  1|2010-01-05|      AAPL|7.664286|7.699643|7.616071|7.656429| 6.526476| 601904800|\n",
+      "|  3|2010-01-07|      AAPL|7.562500|7.571429|7.466071|7.520714| 6.410790| 477131200|\n",
+      "|  4|2010-01-08|      AAPL|7.510714|7.571429|7.466429|7.570714| 6.453412| 447610800|\n",
+      "|  5|2010-01-11|      AAPL|7.600000|7.607143|7.444643|7.503929| 6.396483| 462229600|\n",
+      "|  8|2010-01-14|      AAPL|7.503929|7.516429|7.465000|7.479643| 6.375781| 432894000|\n",
+      "| 10|2010-01-19|      AAPL|7.440357|7.685357|7.401429|7.680000| 6.546568| 730007600|\n",
+      "| 11|2010-01-20|      AAPL|7.675357|7.698214|7.482143|7.561786| 6.445801| 612152800|\n",
+      "| 12|2010-01-21|      AAPL|7.574286|7.618214|7.400357|7.431071| 6.334377| 608154400|\n",
+      "| 14|2010-01-25|      AAPL|7.232500|7.310714|7.149643|7.252500| 6.182159|1065699600|\n",
+      "| 15|2010-01-26|      AAPL|7.355357|7.632500|7.235000|7.355000| 6.269532|1867110000|\n",
+      "| 17|2010-01-28|      AAPL|7.318929|7.339286|7.096429|7.117500| 6.067085|1173502400|\n",
+      "| 18|2010-01-29|      AAPL|7.181429|7.221429|6.794643|6.859286| 5.846978|1245952400|\n",
+      "| 19|2010-02-01|      AAPL|6.870357|7.000000|6.832143|6.954643| 5.928262| 749876400|\n",
+      "| 20|2010-02-02|      AAPL|6.996786|7.011429|6.906429|6.995000| 5.962664| 698342400|\n",
+      "| 22|2010-02-04|      AAPL|7.026071|7.084643|6.841786|6.858929| 5.846675| 757652000|\n",
+      "| 23|2010-02-05|      AAPL|6.879643|7.000000|6.816071|6.980714| 5.950485| 850306800|\n",
+      "| 24|2010-02-08|      AAPL|6.988929|7.067143|6.928571|6.932857| 5.909691| 478270800|\n",
+      "| 25|2010-02-09|      AAPL|7.015000|7.053571|6.955357|7.006786| 5.972710| 632886800|\n",
+      "| 26|2010-02-10|      AAPL|6.996071|7.021429|6.937857|6.968571| 5.940135| 370361600|\n",
+      "| 27|2010-02-11|      AAPL|6.960000|7.133929|6.930714|7.095357| 6.048210| 550345600|\n",
+      "+---+----------+----------+--------+--------+--------+--------+---------+----------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
