--- a/dsa-airflow/dags/rg_work_test.ipynb
+++ b/dsa-airflow/dags/rg_work_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,11 @@
     "    idf = idf.withColumn('stock_name', sf.lit(csv))\n",
     "    idf = idf.select('stock_name', 'date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
     "    idf = idf.toPandas()\n",
-    "    idf.to_csv(os.path.join(data_dir,'all_tech_stocks.csv'), mode='a', header=True)\n",
+    "    idf.to_csv(os.path.join(data_dir,'all_tech_stocks.csv'), mode='a')\n",
     "\n",
     "df = sparkql.read.csv(os.path.join(data_dir,'all_tech_stocks.csv'), header=True)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -79,6 +81,73 @@
    ],
    "source": [
     "df.sample(.5).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud import bigquery\n",
+    "from google.oauth2 import service_account\n",
+    "from google.cloud.exceptions import NotFound\n",
+    "\n",
+    "PROJECT_NAME = 'team-week-3'\n",
+    "DATASET_NAME = 'tech_stocks_world_events'\n",
+    "\n",
+    "key_path = \"/Users/Ruben/Desktop/google_cred/.cred/team_project_3/team-week-3-2f1d10dceea4.json\"\n",
+    "\n",
+    "credentials = service_account.Credentials.from_service_account_file(\n",
+    "    key_path, scopes=[\"https://www.googleapis.com/auth/cloud-platform\"],\n",
+    ")\n",
+    "\n",
+    "client = bigquery.Client(credentials=credentials, project=credentials.project_id)\n",
+    "\n",
+    "dataset_id = f\"{PROJECT_NAME}.{DATASET_NAME}\"\n",
+    "table_id = f\"{PROJECT_NAME}.{DATASET_NAME}.stocks\"\n",
+    "\n",
+    "data_dir = '../data'\n",
+    "DATA_FILE = os.path.join(data_dir,'all_tech_stocks.csv')\n",
+    "\n",
+    "TABLE_SCHEMA = [\n",
+    "    bigquery.SchemaField('stock_name', 'STRING', mode='REQUIRED'),\n",
+    "    bigquery.SchemaField('date', 'DATE', mode='NULLABLE'),\n",
+    "    bigquery.SchemaField('open', 'FLOAT', mode='NULLABLE'),\n",
+    "    bigquery.SchemaField('high', 'FLOAT', mode='NULLABLE'),\n",
+    "    bigquery.SchemaField('low', 'FLOAT', mode='NULLABLE'),\n",
+    "    bigquery.SchemaField('close', 'FLOAT', mode='NULLABLE'),\n",
+    "    bigquery.SchemaField('adj_close', 'STRING', mode='NULLABLE'),\n",
+    "    bigquery.SchemaField('volume', 'INTEGER', mode='NULLABLE'),\n",
+    "    ]\n",
+    "\n",
+    "def create_dataset():\n",
+    "    if client.get_dataset(dataset_id) == NotFound:\n",
+    "        dataset = bigquery.Dataset(dataset_id)\n",
+    "        dataset.location = \"US\"\n",
+    "        dataset = client.create_dataset(dataset, exists_ok=True)\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "def create_stocks_table():\n",
+    "    job_config = bigquery.LoadJobConfig(\n",
+    "            source_format=bigquery.SourceFormat.CSV,\n",
+    "            autodetect=True,\n",
+    "            create_disposition='CREATE_NEVER',\n",
+    "            write_disposition='WRITE_TRUNCATE',\n",
+    "            ignore_unknown_values=True,\n",
+    "        )\n",
+    "    table = bigquery.Table(table_id, schema=TABLE_SCHEMA)\n",
+    "    table = client.create_table(table, exists_ok=True)\n",
+    "\n",
+    "    with open(DATA_FILE, \"rb\") as source_file:\n",
+    "        job = client.load_table_from_file(source_file, table_id, job_config=job_config)\n",
+    "\n",
+    "    job.result()\n",
+    "\n",
+    "create_dataset()\n",
+    "create_stocks_table()"
    ]
   }
  ],
