WIP: trying to upload pyspark CSV to BigQuery

--- a/dsa-airflow/dags/rg_work_test.ipynb
+++ b/dsa-airflow/dags/rg_work_test.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "import pyspark\n",
     "import pandas as pd\n",
@@ -18,76 +26,76 @@
     "import os\n",
     "data_dir = '../data'\n",
     "\n",
-    "file_names = ['AAPL','ADBE','AMZN', 'CRM', 'CSCO', 'GOOGL', 'IBM','INTC','META','MSFT','NFLX','NVDA','ORCL','TSLA']\n",
+    "file_names = ['ADBE','AMZN', 'CRM', 'CSCO', 'GOOGL', 'IBM','INTC','META','MSFT','NFLX','NVDA','ORCL','TSLA']\n",
     "\n",
     "columns = 'stock_name string, date date, open float, high float, low float, close float, adj_close float, volume int'\n",
+    "\n",
+    "df = sparkql.read.csv(os.path.join(data_dir,'AAPL.csv'), header=True)\n",
+    "df = df.toDF('date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
+    "df = df.withColumn('stock_name', sf.lit('AAPL'))\n",
+    "df = df.select('stock_name', 'date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
     "\n",
     "for csv in file_names:\n",
     "    idf = sparkql.read.csv(os.path.join(data_dir,csv+'.csv'), header=True)\n",
     "    idf = idf.toDF('date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
     "    idf = idf.withColumn('stock_name', sf.lit(csv))\n",
     "    idf = idf.select('stock_name', 'date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
-    "    idf = idf.toPandas()\n",
-    "    idf.to_csv(os.path.join(data_dir,'all_tech_stocks.csv'), mode='a')\n",
+    "    #idf = idf.toPandas()\n",
+    "    \n",
+    "    df = df.union(idf)\n",
     "\n",
-    "df = sparkql.read.csv(os.path.join(data_dir,'all_tech_stocks.csv'), header=True)\n",
     "\n",
-    "\n",
-    "\n"
+    "df.write.csv(os.path.join(data_dir,'all_tech_stocks'), header=True)\n",
+    "#df = sparkql.read.csv(os.path.join(data_dir,'all_tech_stocks.csv'), header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/02/13 13:43:04 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , date, stock_name, open, high, low, close, adj_close, volume\n",
-      " Schema: _c0, date, stock_name, open, high, low, close, adj_close, volume\n",
-      "Expected: _c0 but found: \n",
-      "CSV file: file:///Users/Ruben/Desktop/team-week3/dsa-airflow/data/all_tech_stocks.csv\n",
-      "+---+----------+----------+--------+--------+--------+--------+---------+----------+\n",
-      "|_c0|      date|stock_name|    open|    high|     low|   close|adj_close|    volume|\n",
-      "+---+----------+----------+--------+--------+--------+--------+---------+----------+\n",
-      "|  1|2010-01-05|      AAPL|7.664286|7.699643|7.616071|7.656429| 6.526476| 601904800|\n",
-      "|  3|2010-01-07|      AAPL|7.562500|7.571429|7.466071|7.520714| 6.410790| 477131200|\n",
-      "|  4|2010-01-08|      AAPL|7.510714|7.571429|7.466429|7.570714| 6.453412| 447610800|\n",
-      "|  5|2010-01-11|      AAPL|7.600000|7.607143|7.444643|7.503929| 6.396483| 462229600|\n",
-      "|  8|2010-01-14|      AAPL|7.503929|7.516429|7.465000|7.479643| 6.375781| 432894000|\n",
-      "| 10|2010-01-19|      AAPL|7.440357|7.685357|7.401429|7.680000| 6.546568| 730007600|\n",
-      "| 11|2010-01-20|      AAPL|7.675357|7.698214|7.482143|7.561786| 6.445801| 612152800|\n",
-      "| 12|2010-01-21|      AAPL|7.574286|7.618214|7.400357|7.431071| 6.334377| 608154400|\n",
-      "| 14|2010-01-25|      AAPL|7.232500|7.310714|7.149643|7.252500| 6.182159|1065699600|\n",
-      "| 15|2010-01-26|      AAPL|7.355357|7.632500|7.235000|7.355000| 6.269532|1867110000|\n",
-      "| 17|2010-01-28|      AAPL|7.318929|7.339286|7.096429|7.117500| 6.067085|1173502400|\n",
-      "| 18|2010-01-29|      AAPL|7.181429|7.221429|6.794643|6.859286| 5.846978|1245952400|\n",
-      "| 19|2010-02-01|      AAPL|6.870357|7.000000|6.832143|6.954643| 5.928262| 749876400|\n",
-      "| 20|2010-02-02|      AAPL|6.996786|7.011429|6.906429|6.995000| 5.962664| 698342400|\n",
-      "| 22|2010-02-04|      AAPL|7.026071|7.084643|6.841786|6.858929| 5.846675| 757652000|\n",
-      "| 23|2010-02-05|      AAPL|6.879643|7.000000|6.816071|6.980714| 5.950485| 850306800|\n",
-      "| 24|2010-02-08|      AAPL|6.988929|7.067143|6.928571|6.932857| 5.909691| 478270800|\n",
-      "| 25|2010-02-09|      AAPL|7.015000|7.053571|6.955357|7.006786| 5.972710| 632886800|\n",
-      "| 26|2010-02-10|      AAPL|6.996071|7.021429|6.937857|6.968571| 5.940135| 370361600|\n",
-      "| 27|2010-02-11|      AAPL|6.960000|7.133929|6.930714|7.095357| 6.048210| 550345600|\n",
-      "+---+----------+----------+--------+--------+--------+--------+---------+----------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[Row(stock_name='TSLA', date='2022-12-15', open='153.440002', high='160.929993', low='153.279999', close='157.669998', adj_close='157.669998', volume='122334500'),\n",
+       " Row(stock_name='TSLA', date='2022-12-16', open='159.639999', high='160.990005', low='150.039993', close='150.229996', adj_close='150.229996', volume='139032200'),\n",
+       " Row(stock_name='TSLA', date='2022-12-19', open='154.000000', high='155.250000', low='145.820007', close='149.869995', adj_close='149.869995', volume='139390600'),\n",
+       " Row(stock_name='TSLA', date='2022-12-20', open='146.050003', high='148.470001', low='137.660004', close='137.800003', adj_close='137.800003', volume='159563300'),\n",
+       " Row(stock_name='TSLA', date='2022-12-21', open='139.339996', high='141.259995', low='135.889999', close='137.570007', adj_close='137.570007', volume='145417400'),\n",
+       " Row(stock_name='TSLA', date='2022-12-22', open='136.000000', high='136.630005', low='122.260002', close='125.349998', adj_close='125.349998', volume='210090300'),\n",
+       " Row(stock_name='TSLA', date='2022-12-23', open='126.370003', high='128.619995', low='121.019997', close='123.150002', adj_close='123.150002', volume='166989700'),\n",
+       " Row(stock_name='TSLA', date='2022-12-27', open='117.500000', high='119.669998', low='108.760002', close='109.099998', adj_close='109.099998', volume='208643400'),\n",
+       " Row(stock_name='TSLA', date='2022-12-28', open='110.349998', high='116.269997', low='108.239998', close='112.709999', adj_close='112.709999', volume='221070500'),\n",
+       " Row(stock_name='TSLA', date='2022-12-29', open='120.389999', high='123.570000', low='117.500000', close='121.820000', adj_close='121.820000', volume='221923300')]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sample(.5).show()"
+    "df.tail(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../data/all_tech_stocks/*.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/74/s3dyx3n926z8q5dgtnrj1yp00000gp/T/ipykernel_8773/2991631403.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m \u001b[0mcreate_stocks_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/74/s3dyx3n926z8q5dgtnrj1yp00000gp/T/ipykernel_8773/2991631403.py\u001b[0m in \u001b[0;36mcreate_stocks_table\u001b[0;34m()\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexists_ok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_FILE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msource_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m         \u001b[0mjob\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_table_from_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtable_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjob_config\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjob_config\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/all_tech_stocks/*.csv'"
+     ]
+    }
+   ],
    "source": [
     "from google.cloud import bigquery\n",
     "from google.oauth2 import service_account\n",
@@ -108,7 +116,7 @@
     "table_id = f\"{PROJECT_NAME}.{DATASET_NAME}.stocks\"\n",
     "\n",
     "data_dir = '../data'\n",
-    "DATA_FILE = os.path.join(data_dir,'all_tech_stocks.csv')\n",
+    "DATA_FILE = os.path.join(data_dir,'all_tech_stocks/*.csv')\n",
     "\n",
     "TABLE_SCHEMA = [\n",
     "    bigquery.SchemaField('stock_name', 'STRING', mode='REQUIRED'),\n",
